--- a/index.html
+++ b/index.html
@@ -1,11 +1,65 @@
+<!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BTest 1</title>
+    <title>Personal Portfolio</title>
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    <h1>Test 2</h1>
-    <p>Test2</p>
+
+    <div class="background"></div>
+
+    <header>
+        <div class="header-image">
+            <img src="ocra.jpg" alt="Your Image">
+        </div>
+        <div class="header-content">
+            <h1>Ocrain Alexandru</h1>
+            <p>Student at Orizont</p>
+        </div>
+    </header>
+    
+
+   
+
+    <section id="about" class="content-section">
+        <h2>About Me</h2>
+        <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.".</p>
+    </section>
+
+    <section id="skills" class="content-section">
+        <h2>Skills</h2>
+        <ul>
+            <li>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </li>
+            <li> Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. </li>
+            <li>  
+                Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</li>
+        </ul>
+    </section>
+
+    <section id="projects" class="content-section">
+        <h2>Projects</h2>
+        <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."</p>
+    </section>
+
+    <section id="education" class="content-section">
+        <h2>Education</h2>
+        <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."</p>
+    </section>
+
+    <section id="contact" class="content-section">
+        <h2>Contact</h2>
+        <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."</p>
+    </section>
+
+    <footer>
+        <p>&copy; 2023 Ocrain Alexandru - Personal Portfolio</p>
+    </footer>
+
+    <script src="script.js"></script>
 </body>
+
 </html>
